# gmc_api_gateway/app/controller/workspace.go
@@ -3,7 +3,6 @@ package controller
 import (
 	"context"
 	"errors"
-	"fmt"
 	"log"
 	"net/http"
 	"time"
@@ -60,14 +59,16 @@ func CreateWorkspace(c echo.Context) (err error) {
 		common.ErrorMsg(c, http.StatusUnprocessableEntity, err)
 		return
 	}
-
-	if err != nil {
-		log.Fatal(err)
-	}
-	if FindClusterDB(models.Name) !=nil {
-		common.ErrorMsg(c, http.StatusUnprocessableEntity, err)
-		return
-	}
+	
+	// log.Fatal(checkModel)
+	// log.Fatal(models.Name)
+	// log.Fatal(FindWorkspaceDB(models.Name))
+	// if FindWorkspaceDB(models.Name) !=nil {
+	// 	log.Fatal("test")
+	// 	common.ErrorMsg(c, http.StatusUnprocessableEntity, err)
+	// 	return
+	// }
+	// log.Fatal("test2")
 	memberObjectId, err := cdb2.Find(ctx, bson.M{"memberName": models.MemberName})
 
 	var clusterObjectId2 []bson.D
@@ -75,6 +76,11 @@ func CreateWorkspace(c echo.Context) (err error) {
 	var memberObjectId2 []bson.D
 	var slice []primitive.ObjectID
 
+	checkModel := model.Workspace{}
+	if err := cdb.FindOne(ctx, bson.M{"workspaceName": models.Name}).Decode(&checkModel); err == nil {
+		common.ErrorMsg(c, http.StatusUnprocessableEntity, common.ErrDuplicated)
+		return nil
+	}
 	for i := 0; i < len(models.ClusterName); i++ {
 		clusterObjectId3, _ = cdb3.Find(ctx, bson.M{"clusterName": models.ClusterName[i]})
 		clusterObjectId3.All(ctx, &clusterObjectId2)
@@ -87,7 +93,7 @@ func CreateWorkspace(c echo.Context) (err error) {
 
 	if err = validate.Struct(models); err != nil {
 		for _, err := range err.(validator.ValidationErrors) {
-			fmt.Println(err)
+			log.Fatal(err)
 		}
 		common.ErrorMsg(c, http.StatusUnprocessableEntity, err)
 		return
@@ -95,7 +101,7 @@ func CreateWorkspace(c echo.Context) (err error) {
 	if err != nil {
 		log.Fatal(err)
 	}
-
+	
 	newWorkspace := model.NewWorkspace{
 		Name:          models.Name,
 		Description:   models.Description,
@@ -103,10 +109,11 @@ func CreateWorkspace(c echo.Context) (err error) {
 		Creator:       memberObjectId2[0][0].Value.(primitive.ObjectID),
 		Selectcluster: slice,
 	}
-	models.Created_at = time.Now()
+	
+	newWorkspace.Created_at = time.Now()
 	result, err := cdb.InsertOne(ctx, newWorkspace)
 	if err != nil {
-		common.ErrorMsg(c, http.StatusInternalServerError, err)
+		common.ErrorMsg(c, http.StatusUnprocessableEntity, err)
 		return nil
 	}
 
@@ -185,7 +192,7 @@ func ListWorkspace(c echo.Context) (err error) {
 // @Produce  json
 // @Security   Bearer
 // @Param name path string true "name of the workspace"
-// @Router /workspace/{name} [get]
+// @Router /workspaces/{name} [get]
 // @Tags Workspace
 func FindWorkspace(c echo.Context) (err error) {
 	params := model.PARAMS{
@@ -232,8 +239,6 @@ func FindWorkspace(c echo.Context) (err error) {
 			}
 		}
 		// resourceCnt2, resourceUsage, eventList := GetUserProjectResource(params, tmp_project.Selectcluster)
-		// fmt.Println("resourceCnt : ", resourceCnt2)
-		// fmt.Println("resourceUsage : ", resourceUsage)
 		EventList = append(EventList, List...)
 		// EventList = EventList + common.InterfaceToString(eventList)
 		project := model.Workspace_project{
@@ -280,6 +285,16 @@ func FindWorkspace(c echo.Context) (err error) {
 	return c.JSON(http.StatusOK, Workspace)
 }
 
+// Delete Workspace godoc
+// @Summary Delete Workspace
+// @Description delete Workspace
+// @ApiImplicitParam
+// @Accept  json
+// @Produce  json
+// @Security   Bearer
+// @Router /workspaces/{name} [delete]
+// @Param name path string true "Name of the workspaces"
+// @Tags Workspace
 func DeleteWorkspace(c echo.Context) (err error) {
 	cdb := GetWorkspaceDB("workspace")
 	ctx, _ := context.WithTimeout(context.Background(), time.Second*10)
@@ -334,7 +349,7 @@ func UpdateWorkspace(c echo.Context) (err error) {
 
 	if err = validate.Struct(models); err != nil {
 		for _, err := range err.(validator.ValidationErrors) {
-			fmt.Println(err)
+			log.Fatal(err)
 		}
 		common.ErrorMsg(c, http.StatusUnprocessableEntity, err)
 		return
@@ -375,7 +390,6 @@ func GetDBWorkspace(params model.PARAMS) model.DBWorkspace {
 	var showsWorkspace model.DBWorkspace
 	var clusters []model.Cluster
 	var user model.Member
-	// var workspace model.Workspace
 	cdb := GetClusterDB("workspace")
 	ctx, _ := context.WithTimeout(context.Background(), time.Second*10)
 	search_val := params.Workspace
@@ -413,8 +427,8 @@ func GetDBWorkspace(params model.PARAMS) model.DBWorkspace {
 	// showsProject.Workspace = workspace
 	return showsWorkspace
 }
-func FindWorkspaceDB(value string) *model.Workspace {
-	var workspace model.Workspace
+func FindWorkspaceDB(value string) *model.DBWorkspace {
+	var workspace model.DBWorkspace
 	cdb := GetWorkspaceDB("workspace")
 	ctx, _ := context.WithTimeout(context.Background(), time.Second*10)
 	search_val := value
